# envoy-extauthz-rust

./: .gitignore  LICENSE  README.md  docker-compose.yaml
envoy/: docker-entrypoint.sh  dockerfile  template.envoy.yaml
extauthz/: Cargo.toml  dockerfile
extauthz-service/: Cargo.toml  dockerfile
extauthz-service/proto/envoy/config/core/v3/: http_uri.proto  socket_option.proto
extauthz-service/proto/envoy/type/v3/: http_status.proto  semantic_version.proto
extauthz-service/proto/udpa/annotations/: migrate.proto  status.proto  versioning.proto
extauthz-service/proto/xds/core/v3/: context_params.proto
extauthz-service/src/: main.rs
extauthz-service/src/pb/: mod.rs
extauthz-service/src/pb/google/rpc/: google.rpc.rs
extauthz/proto/envoy/config/core/v3/: base.proto
extauthz/proto/envoy/service/auth/v3/: external_auth.proto
extauthz/proto/envoy/type/v3/: percent.proto
extauthz/proto/udpa/annotations/: migrate.proto  status.proto  versioning.proto
extauthz/proto/xds/annotations/v3/: status.proto
extauthz/proto/xds/core/v3/: context_params.proto
extauthz/src/: main.rs  pb.rs
extauthz/tests/: bootstrap.rs
nginx/: docker-entrypoint.sh  dockerfile
nginx/conf/: nginx.conf
nginx/conf/conf.d/: default.conf  server.conf.template
nginx/html/: index.html
proto/envoy/service/auth/v3/: attribute_context.proto
proto/google/rpc/: status.proto
proto/udpa/annotations/: migrate.proto  status.proto  versioning.proto
proto/validate/: validate.proto
proto/xds/annotations/v3/: status.proto
proto/xds/core/v3/: context_params.proto
(+5 files in other folders)
