[package]
authors = ["Rafael Lemos <contact@flemosr.com"]
name = "extauthz"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
prost = "0.11.9"
prost-types = "0.11.9"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
tonic = "0.9.2"

[dev-dependencies]
tonic-build = { version = "0.9.2", default-features = false, features = [
    "prost",
    "cleanup-markdown",
] }
